--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
           uri: https://github.com/aliqingge/springcloud-config-repository.git
 server:
   port: 9999
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8000/eureka/
